--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -7873,8 +7873,12 @@ footer .col-md-4 {
   padding-bottom: 0.5rem;
 }
 footer .col-md-5,
-footer li.col-md-auto {
+footer li.col-md-auto:nth-child(2) {
   display: none;
+}
+
+footer li.col-md-auto a {
+  font-size: 14px;
 }
 
 .o-footer__bottom-links {
