--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -7876,6 +7876,10 @@ footer li {
   margin-right: 0.5rem;
 }
 
+footer li i[aria-hidden=true] {
+  display: none;
+}
+
 footer li.col-md span {
   font-size: 14px;
 }
