add margin to faq page

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -8653,4 +8653,8 @@ body.modal-open {
   text-decoration: underline;
 }
 
+app-faq .main {
+  padding-top: 2rem;
+}
+
 /*# sourceMappingURL=site.css.map*/
