--- a/assets/scss/_theme.scss
+++ b/assets/scss/_theme.scss
@@ -89,6 +89,10 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: $font-family-headings;
 }
 
+.container h4 {
+	@extend %beta;
+}
+
 nav {
 	height: auto !important;
 	transition: none !important;
