--- a/assets/scss/_result.scss
+++ b/assets/scss/_result.scss
@@ -7,6 +7,7 @@
 		display: flex;
 		align-items: center;
 		margin-bottom: rhythm(2);
+		flex-wrap: wrap;
 	}
 
 	> section.details {
@@ -223,12 +224,22 @@
 	}
 
 	.result-header {
-		width: 50%;
+		width: 100%;
+		margin-bottom: rhythm(2);
+
+		@include bp-up(md) {
+			width: 50%;
+			margin-bottom: 0;
+		}
 	}
 
 	.actions-btn {
-		width: auto;
-		margin-left: auto;
+		width: 100%;
+
+		@include bp-up(md) {
+			width: auto;
+			margin-left: auto;
+		}
 
 		div {
 			display: flex;
