--- a/assets/scss/_form.scss
+++ b/assets/scss/_form.scss
@@ -1,5 +1,9 @@
 @charset 'UTF-8';
 
+::placeholder {
+	text-transform: capitalize;
+}
+
 body {
 	.main {
 		.domain {
@@ -10,6 +14,7 @@ body {
 
 					height: 64px;
 					border-radius: $border-radius;
+					text-transform: lowercase;
 
 					@include bp-up(sm) {
 						font-size: rem(24px);
@@ -57,6 +62,10 @@ body {
 
 			.form-check-inline {
 				display: inline-flex;
+			}
+
+			.advanced {
+				margin-bottom: rhythm(2);
 			}
 
 			.row {
