--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -99,6 +99,12 @@
 	}
 
 	.navbar-collapse {
+		display: none;
+
+		@include bp-up(xl) {
+			display: block;
+		}
+
 		&.collapse {
 			display: none;
 
@@ -129,6 +135,8 @@
 			margin-left: -$grid-gutter-width;
 			padding-top: rhythm(1);
 			padding-bottom: rhythm(1);
+			@extend %box-shadow;
+			border-bottom: 1px solid $color-jade;
 
 			@include bp-up(sm) {
 				top: 95px;
@@ -147,6 +155,8 @@
 				margin-left: 0;
 				padding-top: 0;
 				padding-bottom: 0;
+				border-bottom: 0;
+				box-shadow: none !important;
 			}
 		}
 
