--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -10,7 +10,7 @@
 	padding-bottom: rhythm(1);
 	margin-bottom: rhythm(2);
 
-	@include bp-up(xl) {
+	@include bp-up(lg) {
 		padding-top: rhythm(2);
 		padding-bottom: rhythm(2);
 	}
@@ -35,7 +35,7 @@
 			content: attr(data-text);
 		}
 
-		@include bp-up(xl) {
+		@include bp-up(lg) {
 			display: none;
 		}
 
@@ -101,7 +101,7 @@
 	.navbar-collapse {
 		display: none;
 
-		@include bp-up(xl) {
+		@include bp-up(lg) {
 			display: block;
 		}
 
@@ -114,7 +114,7 @@
 				margin: 0;
 			}
 
-			@include bp-up(xl) {
+			@include bp-up(lg) {
 				display: flex;
 
 				.navbar-nav {
@@ -146,7 +146,7 @@
 				top: 105px;
 			}
 
-			@include bp-up(xl) {
+			@include bp-up(lg) {
 				position: static;
 				background-color: transparent;
 				border-top: 0;
@@ -167,7 +167,7 @@
 			& + .nav-item {
 				border-top: 1px solid $color-jade;
 
-				@include bp-up(xl) {
+				@include bp-up(lg) {
 					border-top: 0;
 				}
 			}
@@ -180,7 +180,7 @@
 			padding: rhythm(1) rhythm(2);
 			display: block;
 
-			@include bp-up(xl) {
+			@include bp-up(lg) {
 				padding-left: rhythm(2);
 				padding-right: rhythm(2);
 				padding-top: 0;
@@ -195,7 +195,7 @@
 		padding-left: rhythm(2);
 		padding-top: rhythm(1);
 
-		@include bp-up(xl) {
+		@include bp-up(lg) {
 			border-top: 0;
 			padding-left: 0;
 			padding-top: 0;
