--- a/src/themes/internetstiftelsen/Layout.astro
+++ b/src/themes/internetstiftelsen/Layout.astro
@@ -6,9 +6,15 @@ import Banner from '../default/Banner.astro';
 import Content from '../default/Content.astro';
 import Alerts from '@/lib/components/Alert/Alerts.svelte';
 import Footer from './Footer.astro';
+
+interface Props {
+    title?: string;
+}
+
+const { title } = Astro.props;
 ---
 
-<BaseLayout>
+<BaseLayout title={title}>
     <Skip />
     <Header />
     <Banner />
