add custom favicons

--- a/src/themes/internetstiftelsen/Layout.astro
+++ b/src/themes/internetstiftelsen/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from '@/layouts/BaseLayout.astro';
+import BaseLayout from './BaseLayout.astro';
 import Skip from '../default/Skip.astro';
 import Header from './Header.astro';
 import Banner from '../default/Banner.astro';
