change Upstream to zonenamster/zonemaster-gui and make theme based changes according to changes in that repo

--- a/src/themes/internetstiftelsen/styles/theme.css
+++ b/src/themes/internetstiftelsen/styles/theme.css
@@ -8,6 +8,7 @@
     --color-palette-main-30: var(--color-palette-ocean-light);
     --border-radius: 0.25rem;
     --button-color: var(--color-palette-ocean-dark);
+    --button-color-hover: var(--color-palette-ocean-dark);
     --button-border-color: var(--color-palette-ocean-dark);
     --button-border-hover-color: var(--color-palette-ocean);
 
