--- a/src/themes/internetstiftelsen/StartTest.astro
+++ b/src/themes/internetstiftelsen/StartTest.astro
@@ -1,13 +1,13 @@
 ---
-import * as m from '@/paraglide/messages.js';
-import { sourceLanguageTag } from '@/paraglide/runtime';
+import * as m from '@/messages';
+import config from '@/config';
 import { getEntry } from 'astro:content';
 import DomainTest from '@/lib/components/DomainTest/DomainTest.svelte';
 import Article from "../default/Article.astro";
 import type { FaqItem } from '../../content.config';
 
 const { lang } = Astro.params;
-const locale = lang || sourceLanguageTag || 'en';
+const locale = lang || config.defaultLanguage || 'en';
 const aboutLevels = await getEntry('faq', `${locale}/severity-levels`);
 
 const data: FaqItem | null = aboutLevels
