add translation for Footer

--- a/src/themes/internetstiftelsen/SvFooter.astro
+++ b/src/themes/internetstiftelsen/SvFooter.astro
@@ -8,16 +8,16 @@ import Grid from '../../lib/components/Grid/Grid.svelte';
         <Grid client:load cols={2} gap="xs">
             <div class="zm-footer-program-versions">
                 <ProgramVersions client:idle />
-                <span class="zm-footer-copyright">Copyright © AFNIC and The Swedish Internet Foundation. All Rights Reserved</span>
+                <span class="zm-footer-copyright">Copyright © AFNIC och Internetstiftelsen. Alla rättigheter förbehållna.</span>
             </div>
             <div class="zm-footer-nav-container">
                 <nav>
                     <ul class="zm-footer-nav">
                         <li>
-                            <a href="https://github.com/zonemaster/zonemaster"><i class="bi bi-github"></i> Source code</a>
+                            <a href="https://github.com/zonemaster/zonemaster"><i class="bi bi-github"></i> Källkod</a>
                         </li>
                         <li>
-                            <a href="https://doc.zonemaster.net/"><i class="bi bi-file-text-fill"></i> Documentation</a>
+                            <a href="https://doc.zonemaster.net/"><i class="bi bi-file-text-fill"></i> Dokumentation</a>
                         </li>
                     </ul>
                 </nav>
@@ -30,8 +30,7 @@ import Grid from '../../lib/components/Grid/Grid.svelte';
                 <div class="grid-18 o-footer__info">
                     <div class="row">
                         <div class="grid-18 grid-lg-9 o-footer__info__freetext">
-                            <p class="o-footer__paragraph"><a href="https://internetstiftelsen.se/en/" target="_blank">The Swedish Internet Foundation</a> is an independent, business-driven and public-benefit organization. We work for an internet that contributes positively to people and society. We are responsible for the internet's Swedish top-level domain .se and manages the operation and administration of the top-level domain .nu. The revenue from our business finances a number of initiatives in order to enable people to use the internet in the best way, and to stimulate the sharing of knowledge and innovation with a focus on the internet.
-
+                            <p class="o-footer__paragraph"><a href="https://internetstiftelsen.se/" target="_blank">Internetstiftelsen</a> Internetstiftelsen är en oberoende, affärsdriven och allmännyttig organisation. Vi verkar för ett internet som bidrar positivt till människan och samhället. Vi ansvarar för internets svenska toppdomän .se och sköter drift och administration av toppdomänen .nu. Intäkterna från affärsverksamheten finansierar en rad satsningar i syfte att möjliggöra att människor kan nyttja internet på bästa sätt, och stimulera kunskapsdelning och innovation med inriktning på internet.
                             </p>
                         </div>
                         <div class="grid-18 grid-lg-9 o-footer__info__contact">
@@ -46,9 +45,9 @@ import Grid from '../../lib/components/Grid/Grid.svelte';
                                 </div>
                                 <div class="grid-md-9 grid-lg-18 grid-xl-9 grid-18 o-footer__info__address2">
                                     <ul class="u-list-clean o-footer__info__contact__address">
-                                        <li class="o-footer__info__contact__address__li">Email: <a class="o-footer__link" href="mailto:info@internetstiftelsen.se">info@internetstiftelsen.se</a></li>
-                                        <li class="o-footer__info__contact__address__li">Telephone: <a class="o-footer__link" href="tel:084523500">08-452 35 00</a></li>
-                                        <li class="o-footer__info__contact__address__li">Corporate identity number: 802405-0190</li>
+                                        <li class="o-footer__info__contact__address__li">E-post: <a class="o-footer__link" href="mailto:info@internetstiftelsen.se">info@internetstiftelsen.se</a></li>
+                                        <li class="o-footer__info__contact__address__li">Telefon: <a class="o-footer__link" href="tel:084523500">08-452 35 00</a></li>
+                                        <li class="o-footer__info__contact__address__li">Organisationsnummer: 802405-0190</li>
                                     </ul>
                                 </div>
                             </div>
@@ -56,7 +55,7 @@ import Grid from '../../lib/components/Grid/Grid.svelte';
                                 <div class="grid-19 grid-md-9 o-footer__info__ISO">
                                     <a href="https://internetstiftelsen.se/om-oss/mer-om-oss/organisation/informationssakerhet/" class="o-footer__link o-footer__external-link" target="_blank" rel="noopener noreferrer">
                                         <img width="54" height="67" src="https://internetstiftelsen.se/app/themes/internetstiftelsen/images/ISO_27001_2022_black_TM.svg" class="o-footer__external-logo" alt="Certifierade enligt ISO/IEC 27001:2022">
-                                        <span>Certified according to ISO/IEC<br>27001:2022</span>
+                                        <span>Certifierade enligt ISO/IEC<br>27001:2022</span>
                                     </a>
                                 </div>
                                 <div class="grid-19 grid-md-9 o-footer__info__CC"></div>
@@ -75,8 +74,8 @@ import Grid from '../../lib/components/Grid/Grid.svelte';
                                         <img class="o-footer__logotype" alt="Svenskarna och internet" src="https://static.internetstiftelsen.se/images/logotypes/svenskarna-och-internet.svg">
                                     </div>
                                     <div class="o-footer__logotypes__item__back">
-                                        <h2>The Swedes and the Internet</h2>
-                                        <span>An annual survey of the internet habits of Swedish people</span>
+                                        <h2>Svenskarna och internet</h2>
+                                        <span>En årlig studie av svenska folkets internetvanor</span>
                                     </div>
                                 </div>
                             </a>
@@ -88,8 +87,8 @@ import Grid from '../../lib/components/Grid/Grid.svelte';
                                         <img class="o-footer__logotype" alt="Internetdagarna" src="https://static.internetstiftelsen.se/images/logotypes/internetdagarna.svg">
                                     </div>
                                     <div class="o-footer__logotypes__item__back">
-                                        <h2>The Internet Days</h2>
-                                        <span>Annual two-day conference organized by The Swedish Internet Foundation</span>
+                                        <h2>Internetdagarna</h2>
+                                        <span>Internetdagarna är en konferens som arrangeras av Internetstiftelsen</span>
                                     </div>
                                 </div>
                             </a>
@@ -102,7 +101,7 @@ import Grid from '../../lib/components/Grid/Grid.svelte';
                                     </div>
                                     <div class="o-footer__logotypes__item__back">
                                         <h2>Bredbandskollen</h2>
-                                        <span>An easy way for you to measure your internet speed and to get help to improve it</span>
+                                        <span>Bredbandskollen är ett oberoende konsumentverktyg som drivs av Internetstiftelsen</span>
                                     </div>
                                 </div>
                             </a>
@@ -115,7 +114,7 @@ import Grid from '../../lib/components/Grid/Grid.svelte';
                                     </div>
                                     <div class="o-footer__logotypes__item__back">
                                         <h2>Internetmuseum</h2>
-                                        <span>A digital museum built, and curated by The Swedish Internet Foundation</span>
+                                        <span>Ett digitalt museum som byggts, och kureras av Internetstiftelsen</span>
                                     </div>
                                 </div>
                             </a>
@@ -128,7 +127,7 @@ import Grid from '../../lib/components/Grid/Grid.svelte';
                                     </div>
                                     <div class="o-footer__logotypes__item__back">
                                         <h2>Digitala lektioner</h2>
-                                        <span>An open education resourse about digital competens in schools</span>
+                                        <span>Öppen digital lärresurs med färdiga lektioner för alla stadier i grundskolan</span>
                                     </div>
                                 </div>
                             </a>
@@ -141,7 +140,7 @@ import Grid from '../../lib/components/Grid/Grid.svelte';
                                     </div>
                                     <div class="o-footer__logotypes__item__back">
                                         <h2>Internetkunskap</h2>
-                                        <span>Collected knowledge that will help you become a safe and aware internet user</span>
+                                        <span>Samlad kunskap som hjälper dig att bli en säker och medveten internetanvändare</span>
                                     </div>
                                 </div>
                             </a>
