--- a/src/themes/internetstiftelsen/Layout.astro
+++ b/src/themes/internetstiftelsen/Layout.astro
@@ -6,12 +6,14 @@ import Banner from '../default/Banner.astro';
 import Content from '../default/Content.astro';
 import Alerts from '@/lib/components/Alert/Alerts.svelte';
 import Footer from './Footer.astro';
+import SvFooter from './SvFooter.astro';
 
 interface Props {
     title?: string;
 }
 
 const { title } = Astro.props;
+const { lang } = Astro.params;
 ---
 
 <BaseLayout title={title}>
@@ -21,7 +23,7 @@ const { title } = Astro.props;
     <Content>
         <slot />
     </Content>
-    <Footer />
+    {lang === 'sv' ? <SvFooter /> : <Footer />}
     <Alerts client:idle />
 
     <script src="../default/scripts/tab-highlighting.js" />
