--- a/src/themes/internetstiftelsen/styles/language-switcher.css
+++ b/src/themes/internetstiftelsen/styles/language-switcher.css
@@ -1,5 +1,6 @@
 .zm-language-switcher__select {
     background-color: var(--color-palette-input-color);
+    padding-right: 34px; /* Space for custom select arrow */
 
     &:focus {
         border-color: var(--color-border-active);
