--- a/src/themes/internetstiftelsen/styles/select.css
+++ b/src/themes/internetstiftelsen/styles/select.css
@@ -1,3 +1,4 @@
 select.zm-select {
     background-color: var(--color-palette-input-color);
+    padding-right: 34px; /* Space for custom select arrow */
 }
