--- a/src/lib/styles/components/switch.css
+++ b/src/lib/styles/components/switch.css
@@ -1,5 +1,8 @@
 .zm-switch {
     cursor: pointer;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
 
     label {
         cursor: pointer;
