--- a/src/themes/internetstiftelsen/styles/footer.css
+++ b/src/themes/internetstiftelsen/styles/footer.css
@@ -29,6 +29,7 @@
         padding: 0 0 var(--spacing-m) 0;
         margin: 0;
         text-align: left;
+        display: block;
     }
 
     ul {
